--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
 }
 
 body {
-  margin: 60px auto;
-  max-width: 800px;
+  margin: 100px;
 }
 
 h1,
@@ -30,9 +29,6 @@ h3 {
 }
 
 p {
-  background: var(--secondary-color);
-  padding: 20px;
-  border-radius: 4px;
   font-size: 18px;
   line-height: 1.5;
   text-align: center;
@@ -68,14 +64,9 @@ p {
   text-align: center;
   display: block;
 }
-
 .about-paragraphs {
-  display: flex;
+  text-align: center;
   margin: 30px 0;
-}
-
-.about-paragraphs p {
-  margin: 10px;
 }
 
 .email-link {
@@ -98,9 +89,7 @@ p {
 .container-fluid {
   margin: 0 40px;
 }
-.yoga-app,
-.weather-app,
-.yogurt-app {
+.app-link {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
@@ -115,4 +104,22 @@ p {
 }
 .home-paragraph h2 {
   margin-bottom: 20px;
+}
+@media (max-width: 576px) {
+  h1 {
+    text-align: center;
+    font-size: 40px;
+  }
+  h2 {
+    text-align: center;
+    font-size: 30px;
+  }
+  .row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
 }
