--- a/style.css
+++ b/style.css
@@ -106,20 +106,28 @@ p {
   margin-bottom: 20px;
 }
 @media (max-width: 576px) {
+  body {
+    margin: 100px 10px;
+  }
   h1 {
     text-align: center;
-    font-size: 40px;
+    font-size: 48px;
   }
   h2 {
     text-align: center;
-    font-size: 30px;
+    font-size: 28px;
   }
+  .email-link,
+  h3 {
+    font-size: 20px;
+  }
+
   .row {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
-    padding: 0;
     text-align: center;
+    padding: 0;
+    margin: 0;
   }
 }
